# message_in_a_bottle

./: .dockerignore  .env  .env.dist  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.debug  Makefile  README.md  docker-compose.yml  docker_push
docker/redis/: redis.conf
src/: main.rs  message.rs  storage.rs  util.rs
src/message/: mod.rs
src/message/mailgun/: mod.rs
src/message/sendgrid/: mod.rs
